--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <p>Estrategia, seguridad y tecnología para tu empresa.</p>
         <a href="https://citas.mastertechsolution.me/" class="btn btn-primary mt-3">Agendar cita</a>
         <a href="https://odoo.mastertechsolution.me/" class="btn btn-primary mt-3">Odoo</a>
-        <a href="https://api.mastertechsolution.me/" class="btn btn-primary mt-3">Api</a>
+        <a href="https://api.mastertechsolution.me/api/v1/contactos" class="btn btn-primary mt-3">Api</a>
 
     </header>
 
